--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.5.0",
     "firebase": "^11.3.1",
+    "framer-motion": "^12.4.10",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
