--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.9",
     "@vercel/analytics": "^1.5.0",
+    "blueimp-md5": "^2.19.0",
     "firebase": "^11.3.1",
     "framer-motion": "^12.4.10",
     "next": "15.1.7",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/blueimp-md5": "^2.18.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
